new maintainer message

--- a/main.tex
+++ b/main.tex
@@ -22,45 +22,26 @@
 %   http://
 %%%
 
-\begin{tabular}{|l|} \hline
-$\,$\\
-{\large{\bf {\it In Memoriam}}}\\ 
-$\,$\\
-\indent {\large{\bf G\'erard COHEN,}}\\ 
-\indent {\large{\bf Fr\'ed\'eric MAFFRAY,}}\\
-\indent {\large{\bf Yannis MANOUSSAKIS,}}\\ 
-\indent {\large{\bf Peter SLATER.}}\\ 
-$\,$ \\ \hline
-\end{tabular}
+\begin{center}
+\textit{In Memoriam} \\
+\vspace{1em}
+\textbf{G\'erard COHEN} \\
+\textbf{Fr\'ed\'eric MAFFRAY} \\
+\textbf{Yannis MANOUSSAKIS} \\
+\textbf{Peter SLATER}
+\end{center}
 
-$\,$
-
-$\,$
-
-\noindent \today\\
-
-\medskip
+\noindent\today
+\bigskip
 
 \noindent \fbox{\parbox{\linewidth \fboxrule \fboxsep}{
-\noindent {\bf \underline{Warning and Public Call}}
-
+\noindent \textbf{\underline{New Maintainer}}
 \medskip
 
-\noindent I intend to retire on March 1st, 2023. After this day, I will not go on updating this bibliography. I do not know how long my site, and in particular this page, will remain visible.
-
-Therefore, I am searching for a volunteer, to whom I will give my files, who will take over and keep this bibliography alive in the years to come. I think it can be useful for the community of researchers working, or wishing to start to work, in this exciting area.}}
-
-\medskip
-
-\noindent \fbox{\parbox{\linewidth \fboxrule \fboxsep}{
-%\noindent \fbox{\parbox{\linewidth \fboxrule \fboxsep}{
-\noindent {\bf \underline{Last News}}
-
-\medskip
-
-\noindent %\antoine{
-%{\textcolor{red} 
-I am very grateful to Devin C. Jean, who has accepted to take care of this bibliography in a near future. More news later.}}%}%}
+\noindent I am Devin Jean, and I will be continuing to maintain this bibliography for the foreseeable future.
+If you would like to recommend a new publication be added, feel free to contact me at \texttt{devin.c.jean@vanderbilt.edu}.
+I will try to stay up to date with new publications, but emails from authors would be greatly appreciated.
+}}
 
 \bigskip
 
