--- a/main.tex
+++ b/main.tex
@@ -1,15 +1,14 @@
 \documentstyle{article}
-%%% \usepackage{calc}
 \begin{document}
-\newcommand{\antoine}[1]{\textcolor{red}}
+
 %%% PUBLICATIONS on IDENTIFYING AND LOCATING-DOMINATING CODES 
 %%% + DISCRIMINATING and around
 %%% (dominating, locating, locating-chromatic number,
 %%% metric-locating-dominating, complexity, 
 %%% well-covered graphs, ...)
-%  
+%%%
 %%%   ALPHABETICAL ORDER
-%
+%%%
 %%%   CHECK:
 %%%   names,
 %%%   << & >> vs. << and >>,
@@ -19,8 +18,7 @@
 %%%   capitals in titles,
 %%%   << vol. >> vs. << Vol. >>,
 %%%   Proceedings, ...
-%   http://
-%%%
+%%%   http://
 
 \begin{center}
 \textit{In Memoriam} \\
@@ -31,71 +29,25 @@
 \textbf{Peter SLATER}
 \end{center}
 
-\noindent\today
 \bigskip
-
 \noindent \fbox{\parbox{\linewidth \fboxrule \fboxsep}{
 \noindent \textbf{\underline{New Maintainer}}
-\medskip
-
+\medskip \\
 \noindent I am Devin Jean, and I will be continuing to maintain this bibliography for the foreseeable future.
 If you would like to recommend a new publication be added, feel free to contact me at \texttt{devin.c.jean@vanderbilt.edu}.
 I will try to stay up to date with new publications, but emails from authors would be greatly appreciated.
 }}
-
 \bigskip
 
 \begin{center}
-\noindent {\bf SYST\`EMES DE CONTR\^OLE,\\CODES IDENTIFIANTS, LOCALISATEURS-DOMINATEURS ET DISCRIMINANTS DANS LES GRAPHES :\\507 r\'ef\'erences}\\
-
-\medskip
-
-\noindent {\bf WATCHING SYSTEMS,\\IDENTIFYING, LOCATING-DOMINATING\\AND DISCRIMINATING CODES IN GRAPHS}
-
+\noindent \textbf{SYST\`EMES DE CONTR\^OLE,\\CODES IDENTIFIANTS, LOCALISATEURS-DOMINATEURS ET DISCRIMINANTS DANS LES GRAPHES}\\
+\bigskip
+\noindent \textbf{WATCHING SYSTEMS,\\IDENTIFYING, LOCATING-DOMINATING\\AND DISCRIMINATING CODES IN GRAPHS} \\
+\bigskip
+\today
 \end{center}
 
 \begin{thebibliography}{999}
-%
-% 1 J. P. BARTH\'ELEMY, G. D. COHEN and A. C. LOBSTEIN: 
-% {\it Complexit\'e algorithmique et probl\`emes de
-% communications}, Paris: Masson, 1992.
-%
-% 2 J. P. BARTH\'ELEMY, G. D. COHEN and A. C. LOBSTEIN: 
-% {\it Algorithmic Complexity and Communication 
-% Problems}, London: University College of London, 1996.
-%
-% 3 C. BERGE: {\it Graphes}, Paris: Gauthier-Villars, 1983.
-%
-% 4 G. D. COHEN, I. S. HONKALA, S. LITSYN and A. C. 
-% LOBSTEIN: {\it Covering Codes}, Amsterdam: Elsevier, 1997.
-%
-% 5 M. FRANCES and A. LITMAN: On covering problems of 
-% codes, Technical Report No. 827, Technion, Haifa, 
-% Israel, 8 pp., 1994.
-%
-% 6 M. FRANCES and A. LITMAN: On covering problems of 
-% codes, {\it Theory of Computing Systems}, Vol.~30, 
-% No. 2, pp. 113--119, 1997.
-%
-% 7 M. R. GAREY and D. S. JOHNSON: {\it Computers and 
-% Intractability, a Guide to the Theory of 
-% NP-Completeness}, New York: Freeman, 1979.
-%
-% 8 R. M. KARP: Reducibility among combinatorial problems,
-% In: {\it Complexity of Computer Computations}, pp. 85--103,
-% New York: Plenum Press, 1972.
-%
-% 9 A. MCLOUGHLIN: The complexity of computing the covering 
-% radius of a code, {\it IEEE Transactions on Information 
-% Theory}, Vol. IT-30, pp. 800--804, 1984.
-%
-% 10 P. J. M. van LAARHOVEN and E. H. L. AARTS: {\it Simulated 
-% Annealing: Theory and Applications}, Dordrecht: Reidel, 1987.
-%
-% 11 A. R. MEYER and L. J. STOCKMEYER: The equivalence problem for 
-% regular expressions with squaring requires exponential time, 
-% {\it Proceedings of the 13th Annual IEEE Symposium on Switching 
-% and Automata Theory}, Long Beach, USA, pp. 125--129, 1972.
 
 \bibitem{abdu21k}
 A. K. ABDUL GAFUR and S. W. SAPUTRO: On locating-dominating set of regular graphs, {\it Journal of Mathematics}, Paper ID 8147514, 6 pages, 2021.
@@ -233,8 +185,7 @@ A. BEHTOEI and M. ANBARLOEI: The locating chromatic number of the join of graphs
 A. BEHTOEI and M. ANBARLOEI: A bound for the locating chromatic number of trees, {\it Transactions on Combinatorics}, Vol.~4(1), pp. 31--41, 2015.
 
 \bibitem{beht11}
-A. BEHTOEI and B. OMOOMI: On the locating chromatic number of Kneser graphs, {\it Discrete Applied Mathematics}, Vol.~159, pp. 2214--2221, 2011. 
-
+A. BEHTOEI and B. OMOOMI: On the locating chromatic number of Kneser graphs, {\it Discrete Applied Mathematics}, Vol.~159, pp. 2214--2221, 2011.
 
 \bibitem{beht16}
 A. BEHTOEI and B. OMOOMI: On the locating chromatic number of the Cartesian product of graphs, {\it Ars Combinatoria}, Vol. 126, pp. 221--235, 2016.
@@ -255,9 +206,6 @@ Y. BEN-HAIM and S. LITSYN: Exact minimum density of codes identifying vertices i
 \bibitem{bens18}
 J. BENSMAIL, D. MAZAURIC, F. MC INERNEY, N. NISSE and S.~P\'E\-RENNES: Sequential metric dimension, {\it Lecture Notes in Computer Science}, No. 11312, pp. 36--50, Springer-Verlag, 2018.
 
-%
-% \bibitem{berg83}
-% C. BERGE: {\it Graphes}, Paris: Gauthier-Villars, 1983.
 \bibitem{berg05}
 T.~Y.~BERGER-WOLF, W. E. HART and J. SAIA: Discrete sensor placement problems in distribution networks, {\it Mathematical and Computer Modelling}, Vol.~42, pp. 1385--1396, 2005.
 
@@ -495,10 +443,6 @@ X. CHEN and M. Y. SOHN: Bounds on the locating-total domination number of a tree
 G. COHEN, S. GRAVIER, I. HONKALA, A. LOBSTEIN, M.~MOLLARD, Ch.~PAYAN and G. Z\'EMOR: Improved identifying codes for the grid, {\it Electronic Journal of Combinatorics}, Vol.~6(1), Comments to R19, 1999.\\
 http://www.combinatorics.org
 
-% \bibitem{cohe97}
-% G. D. COHEN, I. S. HONKALA, S. LITSYN and A. C. LOBSTEIN: 
-% {\it Covering Codes}, Amsterdam: Elsevier, 1997.
-%
 \bibitem{cohe99b}
 G. COHEN, I. HONKALA, A. LOBSTEIN and G. Z\'EMOR: New bounds for codes identifying vertices in graphs, {\it Electronic Journal of Combinatorics}, Vol.~6(1), R19, 1999.\\
 http://www.combinatorics.org
@@ -524,20 +468,18 @@ N. COHEN, N. A. MARTINS, F. MC INERNEY, N. NISSE, S.~P\'E\-RENNES and R. SAMPAIO
 
 \bibitem{colb87a}
 C. J. COLBOURN, P. J. SLATER and L. K. STEWART: Locating dominating sets in series parallel networks, {\it Congressus Numerantium}, Vol.~56, pp. 135--162, 1987.
-% NOT the first on loc-dom codes
 
 \bibitem{coup17}
 P. COUPECHOUX: Extension of universal cycles for globally identifying colorings of cycles, {\it Discrete Mathematics}, Vol.~340, pp. 1456--1466, 2017.
-  
 \bibitem{cran09}
 D. W. CRANSTON and G. YU: A new lower bound on the density of vertex identifying codes for the infinite hexagonal grid, {\it Electronic Journal of Combinatorics}, Vol.~16(1), R113, 2009.\\
-http://www.combinatorics.org   
+http://www.combinatorics.org
 
 \bibitem{cuki13}
 A. CUKIERMAN and G. YU: New bounds on the minimum density of an identifying code for the infinite hexagonal grid, {\it Discrete Applied Mathematics}, Vol. 161, pp. 2910--2924, 2013.
 
 \bibitem{dali14}
-  W. DALI and M. BLIDIA: Criticality indices of locating-domination of paths and cycles, {\it Utilitas Mathematica}, Vol.~94, pp. 199--219, 2014.
+W. DALI and M. BLIDIA: Criticality indices of locating-domination of paths and cycles, {\it Utilitas Mathematica}, Vol.~94, pp. 199--219, 2014.
 
 \bibitem{dali14b}
 W. DALI and M. BLIDIA: On locating and locating-total domination edge addition critical graphs, {\it Utilitas Mathematica}, Vol.~94, pp. 303--313, 2014.
@@ -587,12 +529,9 @@ http://www.combinatorics.org
 
 \bibitem{exoo99a}
 G. EXOO: Computational results on identifying $t$-codes, Preprint, 1999.
-% preprint only,
-% it seems that there is no publication
 
 \bibitem{exoo10}
-G. EXOO, V. JUNNILA and T. LAIHONEN: On location-domination of set of vertices in cycles and paths, %%{÷it Proceedings of the Forty-First Southeastern International Conference on Combinatorics, Graph Theory and Computing}, 
-{\it Congressus Numerantium}, Vol.~202, pp. 97--112, 2010.
+G. EXOO, V. JUNNILA and T. LAIHONEN: On location-domination of set of vertices in cycles and paths, {\it Congressus Numerantium}, Vol.~202, pp. 97--112, 2010.
 
 \bibitem{exoo09}
 G. EXOO, V. JUNNILA and T. LAIHONEN: Locating-dominating codes in paths, {\it Discrete Mathematics}, Vol.~311, pp. 1863--1873, 2011.
@@ -645,7 +584,6 @@ A. S. FINBOW and B. L. HARTNELL: On locating dominating sets and well-covered gr
 
 \bibitem{finb00a}
 A. S. FINBOW and B. L. HARTNELL: Well-located graphs: a collection of well-covered ones, {\it Electronic Notes in Discrete Mathematics}, Vol.~5, 2000.
-% same title as the next one, but 4 years before 
 
 \bibitem{finb04a}
 A. S. FINBOW and B. L. HARTNELL: Well-located graphs: a collection of well-covered ones, {\it Discrete Mathematics}, Vol.~276, pp. 201--209, 2004.
@@ -742,29 +680,12 @@ http://www.combinatorics.org
 \bibitem{fouc17x}
 F. FOUCAUD, G. PERARNAU and O. SERRA: Random subgraphs make identification affordable, {\it Journal of  Combinatorics}, Vol.~8, pp. 57--77, 2017.
 
-% \bibitem{fran94}
-% M. FRANCES and A. LITMAN: On covering problems of 
-% codes, Technical Report No. 827, Technion, Haifa, 
-% Israel, 8 pp., 1994.
-%%% I keep the Report, which is 3 years before ...
-%
-% \bibitem{fran97}
-% M. FRANCES and A. LITMAN: On covering problems of 
-% codes, {\it Theory of Computing Systems}, Vol.~30, 
-% No. 2, pp. 113--119, 1997.
-%%% will these two be used directly ??
-%
 \bibitem{fric07}
 M. FRICK, G. H. FRICKE, C. M. MYNHARDT and R.~D.~SKAGGS: Critical graphs with respect to vertex identification, {\it Utilitas Mathematica}, Vol.~76, pp. 213--227, 2008.
 
 \bibitem{frie06}
 A. FRIEZE, R. MARTIN, J. MONCEL, M. RUSZINK\'O and C.~SMYTH: Codes identifying sets of vertices in random networks, {\it Discrete Mathematics}, Vol.~307, pp. 1094--1107, 2007.
 
-% \bibitem{gare79}
-% M. R. GAREY and D. S. JOHNSON: {\it Computers and 
-% Intractability, a Guide to the Theory of 
-% NP-Completeness}, New York: Freeman, 1979.
-%
 \bibitem{gari14}
 D. GARIJO, A. GONZ\'ALEZ and A. M\'ARQUEZ: The difference between the metric dimension and the determining number of a graph, {\it Applied Mathematics and Computation}, Vol.~ 249, pp. 487--501, 2014.
   
@@ -878,8 +799,7 @@ T. W. HAYNES, S. T. HEDETNIEMI and P. J. SLATER: {\it Fundamentals of Domination
 T. W. HAYNES, M. A. HENNING and J. HOWARD: Locating and total dominating sets in trees, {\it Discrete Applied Mathematics}, Vol.~154, pp. 1293--1300, 2006.
 
 \bibitem{hayn09}
-T. W. HAYNES, K. R. S. HOLMES, D. R. KOESSLER and L.~SEWELL: Locating-domination in complementary prisms of paths and cycles, %%{÷it Proceedings of the Fortieth Southeastern International Conference on Combinatorics, Graph Theory and Computing}, 
-{\it Congressus Numerantium}, Vol.~199, pp. 45--55, 2009.
+T. W. HAYNES, K. R. S. HOLMES, D. R. KOESSLER and L.~SEWELL: Locating-domination in complementary prisms of paths and cycles, {\it Congressus Numerantium}, Vol.~199, pp. 45--55, 2009.
 
 \bibitem{hede15}
 J. HEDETNIEMI: On identifying codes in the Cartesian product of a path and a complete graph, {\it Journal of Combinatorial Optimization}, Vol.~31, pp. 1405--1416, 2016.
@@ -889,7 +809,6 @@ M. A. HENNING and C. L\"{O}WENSTEIN: Locating-total domination in claw-free cubi
 
 \bibitem{henn04}
 M. A. HENNING and O. R. OELLERMANN: Metric-locating-dominating sets in graphs, {\it Ars Combinatoria}, Vol.~73, pp. 129--141, 2004.
-% peripheral? 
 
 \bibitem{henn12b}
 M. A. HENNING and N. J. RAD: Locating-total domination in graphs, {\it Discrete Applied Mathematics}, Vol.~160, pp. 1986--1993, 2012.
@@ -936,7 +855,6 @@ I. HONKALA: On the identifying radius of codes, {\it Proceedings of the 7th Nord
 
 \bibitem{honk02e}
 I. HONKALA: Triple systems identifying quadruples, {\it Australasian Journal of Combinatorics}, Vol.~25, pp. 303--316, 2002.
-% slightly peripheral
 
 \bibitem{honk03d}
 I. HONKALA: An optimal edge-robust identifying code in the triangular lattice, {\it Annals of Combinatorics}, Vol.~8, pp. 303--323, 2004.
@@ -1032,7 +950,6 @@ I. HONKALA and A. LOBSTEIN: On the complexity of the identification problem in H
 
 \bibitem{honk02f}
 I. HONKALA and A. LOBSTEIN: Identifying vertices in the $n$-cube, {\it Proceedings of the 8th International Workshop on Algebraic and Combinatorial Coding Theory}, Tsarskoe Selo, Russia, pp. 198--201, 2002.
-% completely included in another article
 
 \bibitem{honk03a}
 I. HONKALA and A. LOBSTEIN: On identification in $Z^2$ using translates of given patterns, {\it Journal of Universal Computer Science}, Vol.~9(10), pp. 1204--1219, October 2003.\\
@@ -1051,12 +968,11 @@ O. HUDRY and A. LOBSTEIN: More results on the complexity of identifying problems
 O. HUDRY and A. LOBSTEIN: Some results about a conjecture on identifying codes in complete suns, {\it International Transactions in Operational Research}, Vol.~26, pp. 732--746, 2019.
 
 \bibitem{hudr18a}
-O. HUDRY and A. LOBSTEIN: Unique (optimal) solutions: Complexity results for identifying and locating-dominating codes, {\it Theoretical Computer Science}, Vol. 767, pp. 83--102, 2019.%\\
+O. HUDRY and A. LOBSTEIN: Unique (optimal) solutions: Complexity results for identifying and locating-dominating codes, {\it Theoretical Computer Science}, Vol. 767, pp. 83--102, 2019.
 
 \bibitem{hudr18z}
 O. HUDRY and A. LOBSTEIN: The compared costs of domination, location-domination and identification, {\it Discussiones Mathematicae Graph Theory}, Vol.~40(1), pp. 127--147, 2020.\\
-%{\small 
-www.discuss.wmie.uz.zgora.pl/gt/index.php?doi=10.7151/dmgt.2129%}
+www.discuss.wmie.uz.zgora.pl/gt/index.php?doi=10.7151/dmgt.2129
 
 \bibitem{hudr20z}
 O. HUDRY and A. LOBSTEIN: Some rainbow problems in graphs have complexity equivalent to satisfiability problems, {\it International Transactions in Operational Research}, Vol.~29(3), pp. 1547--1572, 2022.
@@ -1168,22 +1084,11 @@ V. JUNNILA, T. LAIHONEN and A. PARREAU: Tolerant identification with Euclidean b
 \bibitem{kang22}
 C. X. KANG and E. YI: Distance-$k$ locating-dominating sets in graphs, {\it Bulletin of the Institute of Combinatorics and its Applications}, Vol. 95, pp. 38--56, 2022.
 
-% \bibitem{karp72}
-% R. M. KARP: Reducibility among combinatorial problems,
-% In: {\it Complexity of Computer Computations}, pp. 85--103,
-% New York: Plenum Press, 1972.
-%
 \bibitem{karp98a}
 M. G. KARPOVSKY, K. CHAKRABARTY and L. B. LEVITIN: On a new class of codes for identifying vertices in graphs, {\it IEEE Transactions on Information Theory}, Vol. IT-44, pp. 599--611, 1998.
-% considered as the founder article for identifying codes,
-% BUT see {rao93}!
 
 \bibitem{karp99a}
 M. G. KARPOVSKY, K. CHAKRABARTY, L. B. LEVITIN and D.~R.~AVRESKY: On the covering of vertices for fault diagnosis in hypercubes, {\it Information Processing Letters}, Vol.~69, pp. 99--103, 1999.
-%
-% \bibitem{laar87}
-% P. J. M. van LAARHOVEN and E. H. L. AARTS: {\it Simulated 
-% Annealing: Theory and Applications}, Dordrecht: Reidel, 1987.
 
 \bibitem{kim05}
 J. H. KIM, O. PIKHURKO, J. H. SPENCER and O. VERBITSKY: How complex are random graphs in first order logic? {\it Random Structures \& Algorithms}, Vol.~126, pp. 119--145, 2005.
@@ -1289,24 +1194,12 @@ J. McCOY and M. A. HENNING: Locating and paired-dominating sets in graphs, {\it 
 F. MC INERNEY: Domination and identification games in graphs, Th\`ese de
 Doctorat, Universit\'e C\^ote d'Azur, France, xii+157 pages, July 2019.
 
-% \bibitem{mclo84}
-% A. MCLOUGHLIN: The complexity of computing the covering 
-% radius of a code, {\it IEEE Transactions on Information 
-% Theory}, Vol. IT-30, pp. 800--804, 1984.
 \bibitem{madd21} 
 S. MADDAH, M. GHORBANI and M. DEHMER: New results of identifying codes in product graphs, {\it Applied Mathematics and Computation}, Vol. 410, 126438, 7 pages, 2021.
 
 \bibitem{manu11}
 P. MANUEL: Locating and liar domination of circulant networks, {\it Ars Combinatoria}, Vol.~101, pp. 309--320, 2011.
 
-%
-% \bibitem{meye72}
-% A. R. MEYER and L. J. STOCKMEYER: The equivalence problem for 
-% regular expressions with squaring requires exponential time, 
-% {\it Proceedings of the 13th Annual IEEE Symposium on Switching 
-% and Automata Theory}, Long Beach, USA, pp. 125--129, 1972.
-%%% for a succinct presentation of polynomial hierarchy,
-%
 \bibitem{mart10}
 R. MARTIN and B. STANTON: Lower bounds for identifying codes in some infinite grids, {\it Electronic Journal of Combinatorics}, Vol.~17(1), R122, 2010.\\
 http://www.combinatorics.org
@@ -1473,7 +1366,6 @@ I. RAJASINGH, R. JAYAGOPAL and R. S. RAJAN: Domination parameters in hypertrees 
 
 \bibitem{rall84a}
 D. F. RALL and P. J. SLATER: On location-domination numbers for certain classes of graphs, {\it Congressus Numerantium}, Vol.~45, pp. 97--106, 1984.
-% the 2-nd on loc-dom codes
 
 \bibitem{rall12}
 D. F. RALL and K. WASH: Identifying codes of the direct product of two cliques, {\it European Journal of Combinatorics}, Vol.~36, pp. 159--171, 2014.
@@ -1495,12 +1387,6 @@ S. RANTO, I. HONKALA and T. LAIHONEN: Two families of optimal identifying codes 
 
 \bibitem{rao93}
 N. S. V. RAO: Computational complexity issues in operative diagnosis of graph-based systems, {\it IEEE Transactions on Computers}, Vol.~42, pp. 447--457, 1993.
-% already contains, underlying, the idea of identifying code
-% in Section 5 (UNIQUE Single Fault Diagnosis);
-% contains a result on complexity RUSFD (directed graphs,
-% $r=n-1$, i.e., the ball contains all ``accessible'' vertices
-% [therefore, no cycles]),
-% (result wrongly attributed in {ray03a})
 
 \bibitem{rasp12}
 A. RASPAUD and L. D. TONG: The minimum identifying code graphs, {\it Discrete Applied Mathematics}, Vol.~160, pp. 1385--1389, 2012.
@@ -1510,7 +1396,6 @@ S. RAY, D. STAROBINSKI, A.~TRACHTENBERG and R.~UNGRANGSI: Robust location detect
 
 \bibitem{ray03a}
 S. RAY, R. UNGRANGSI, F. DE PELLEGRINI, A.~TRACHTENBERG and D.~STAROBINSKI: Robust location detection in emergency sensor networks, {\it Proceedings of INFOCOM 2003}, San Francisco, USA, pp. 1044--1053, April 2003.
-% wrongly attributes results on complexity to {rao93}
 
 \bibitem{raza21} 
 H. RAZA: Computing open locating-dominating number of some rotationally-symmetric graphs, {\it Mathematics},  Vol. 9(12), 2021.
@@ -1611,16 +1496,12 @@ P. J. SLATER: Leaves of trees, {\it Congressus Numerantium}, Vol.~14, pp. 549--5
 
 \bibitem{slat83}
 P. J. SLATER: Domination and location in graphs, National University of Singapore, Research Report No.~93, April 1983.
-% the FIRST on loc-dom;
-% Slater does not have it...
 
 \bibitem{slat87a}
 P. J. SLATER: Domination and location in acyclic graphs, {\it Networks}, Vol.~17, pp. 55--64, 1987.
 
 \bibitem{slat88a}
 P. J. SLATER: Dominating and reference sets in a graph, {\it Journal of Mathematical and Physical Sciences}, Vol.~22, pp. 445--455, 1988.
-% mentioned in Rall-Slater 1984 for the birth
-% of loc-dom codes, but appeared 4 ans later !?
 
 \bibitem{slat95a}
 P. J. SLATER: Locating dominating sets and locating-dominating sets, In: {\it Graph Theory, Combinatorics, and Applications: Proceedings of the 7th Quadrennial International Conference on the Theory and Applications of Graphs}, Vol.~2, pp. 1073--1079, Wiley, 1995.
