--- a/refs.bib
+++ b/refs.bib
@@ -395,11 +395,10 @@
 @article{benh08,
     title = {Adaptive identification in graphs},
     author = {Y. Ben-haim and S. Gravier and A. Lobstein and J. Moncel},
-    journal = {Journal of Combinatorial Theory},
+    journal = {Journal of Combinatorial Theory, Series A},
     year = {2008},
     pages = {1114--1126},
-    volume = {115},
-    note = {Ser. A}
+    volume = {115}
 }
 @article{benh09,
     title = {Adaptive identification in torii in the king lattice},
@@ -1243,7 +1242,6 @@
     year = {2020},
     volume = {181},
     pages = {24:1--24:16},
-    volume = {181},
     note = {Leibniz International Proceedings in Informatics}
 }
 @article{dhal19a,
@@ -1458,24 +1456,22 @@
     pages = {233--244},
     volume = {116}
 }
-@article{fouc09,
+@mastersthesis{fouc09,
     title = {Identifying codes in special graph classes},
     author = {F. Foucaud},
-    journal = {M\'emoire de Master, Universit\'e de Bordeaux 1},
+    school = {Universit\'e de Bordeaux 1},
     month = {June},
     year = {2009},
-    note = {France},
-    howpublished = {\url{http://www.labri.fr/perso/foucaud/Research/MasterThesis}}
+    address = {Bordeaux, France}
 }
-@article{fouc12b,
+@phdthesis{fouc12b,
     title = {Aspects combinatoires et algorithmiques des codes identifiants dans les graphes},
     author = {F. Foucaud},
-    journal = {Th\`ese de Doctorat},
     month = {December},
     year = {2012},
     pages = {194},
     school = {Universit\'e de Bordeaux 1},
-    note = {France}
+    address = {Bordeaux, France}
 }
 @article{fouc13a,
     title = {The complexity of the identifying code problem in restricted graph classes},
@@ -1778,10 +1774,9 @@
     pages = {129--144},
     volume = {151}
 }
-@article{give18,
+@phdthesis{give18,
     title = {Mixed-weight open locating dominating sets},
     author = {R. M. Givens},
-    journal = {Ph. D. Thesis},
     year = {2018},
     school = {The College of William and Mary},
     note = {Virginia, USA}
@@ -1973,11 +1968,10 @@
 @article{hata05,
     title = {$\Delta +300$ is a bound on the adjacent vertex distinguishing edge chromatic number},
     author = {H. Hatami},
-    journal = {Journal of Combinatorial Theory},
+    journal = {Journal of Combinatorial Theory, Series B},
     year = {2005},
     pages = {246--256},
-    volume = {95},
-    note = {Ser. B}
+    volume = {95}
 }
 @article{have14,
     title = {Detection number of bipartite graphs and cubic graphs},
@@ -2094,10 +2088,10 @@
     note = {R30},
     howpublished = {\url{http://www.combinatorics.org}}
 }
-@article{heyd18,
+@mastersthesis{heyd18,
     title = {Location-domination in twin-free graphs and digraphs},
     author = {S. Heydarshahi},
-    journal = {Master's Thesis, Universit\'e Paris Sorbonne},
+    journal = {Universit\'e Paris Sorbonne},
     year = {2018}
 }
 @article{hiss13,
@@ -2115,13 +2109,13 @@
     pages = {152--160},
     volume = {26}
 }
-@article{holm09,
+@mastersthesis{holm09,
     title = {Locating-domination in complementary prisms},
     author = {K. R. S. Holmes},
-    journal = {Master's Thesis, East Tennessee State University},
+    school = {East Tennessee State University},
     year = {2009},
     pages = {37},
-    note = {USA}
+    address = {Tennessee, USA}
 }
 @article{holm10,
     title = {Locating-domination in complementary prisms},
@@ -2137,7 +2131,7 @@
     journal = {Proceedings of the 7th Nordic Combinatorial Conference},
     year = {1999},
     pages = {39--43},
-    note = {Turku, Finland}
+    address = {Turku, Finland}
 }
 @article{honk02e,
     title = {Triple systems identifying quadruples},
@@ -2158,11 +2152,11 @@
 @article{honk06a,
     title = {A family of optimal identifying codes in $Z^2$},
     author = {I. Honkala},
-    journal = {Journal of Combinatorial Theory},
+    journal = {Journal of Combinatorial Theory, Series A},
     year = {2006},
     pages = {1760--1763},
     volume = {113},
-    note = {Ser. A}
+    doi = {10.1016/j.jcta.2006.03.011}
 }
 @article{honk05a,
     title = {An optimal locating-dominating set in the infinite triangular grid},
@@ -2170,7 +2164,8 @@
     journal = {Discrete Mathematics},
     year = {2006},
     pages = {2670--2681},
-    volume = {306}
+    volume = {306},
+    doi = {10.1016/j.disc.2006.04.028}
 }
 @article{honk06b,
     title = {On 2-edge-robust $r$-identifying codes in the king grid},
@@ -2178,7 +2173,8 @@
     journal = {Australasian Journal of Combinatorics},
     year = {2006},
     pages = {151--165},
-    volume = {36}
+    volume = {36},
+    howpublished = {\url{https://ajc.maths.uq.edu.au/pdf/36/ajc_v36_p151.pdf}}
 }
 @article{honk08,
     title = {On $r$-locating-dominating sets in paths},
@@ -2186,7 +2182,8 @@
     journal = {European Journal of Combinatorics},
     year = {2009},
     pages = {1022--1025},
-    volume = {30}
+    volume = {30},
+    doi = {10.1016/j.ejc.2008.04.011}
 }
 @article{honk10,
     title = {An optimal strongly identifying code in the infinite triangular grid},
@@ -2195,8 +2192,8 @@
     year = {2010},
     volume = {17},
     number = {1},
-    note = {R91},
-    howpublished = {\url{http://www.combinatorics.org}}
+    pages = {10},
+    doi = {10.37236/363}
 }
 @article{honk14c,
     title = {On the number of optimal identifying codes in a twin-free graph},
@@ -2290,11 +2287,10 @@
 @article{honk04f,
     title = {On identification in the triangular grid},
     author = {I. Honkala and T. Laihonen},
-    journal = {Journal of Combinatorial Theory},
+    journal = {Journal of Combinatorial Theory, Series B},
     year = {2004},
     pages = {67--86},
-    volume = {91},
-    note = {Ser. B}
+    volume = {91}
 }
 @article{honk05c,
     title = {On locating-dominating sets in infinite grids},
@@ -2373,20 +2369,18 @@
 @article{honk02a,
     title = {On the density of identifying codes in the square lattice},
     author = {I. Honkala and A. Lobstein},
-    journal = {Journal of Combinatorial Theory},
+    journal = {Journal of Combinatorial Theory, Series B},
     year = {2002},
     pages = {297--306},
-    volume = {85},
-    note = {Ser. B}
+    volume = {85}
 }
 @article{honk02b,
     title = {On identifying codes in binary Hamming spaces},
     author = {I. Honkala and A. Lobstein},
-    journal = {Journal of Combinatorial Theory},
+    journal = {Journal of Combinatorial Theory, Series A},
     year = {2002},
     pages = {232--243},
-    volume = {99},
-    note = {Ser. A}
+    volume = {99}
 }
 @article{honk02c,
     title = {On the complexity of the identification problem in Hamming spaces},
@@ -2423,13 +2417,13 @@
     pages = {1827--1848},
     volume = {15}
 }
-@article{howa04,
+@mastersthesis{howa04,
     title = {Locating and total dominating sets in trees},
     author = {J. M. Howard},
-    journal = {Master's Thesis, East Tennessee State University},
+    school = {East Tennessee State University},
     year = {2004},
     pages = {48},
-    note = {USA}
+    address = {Tennessee, USA}
 }
 @article{hudr15a,
     title = {More results on the complexity of identifying problems in graphs},
@@ -2501,11 +2495,10 @@
 @article{jans09,
     title = {On the size of identifying codes in binary hypercubes},
     author = {S. Janson and T. Laihonen},
-    journal = {Journal of Combinatorial Theory},
+    journal = {Journal of Combinatorial Theory, Series A},
     year = {2009},
     pages = {1087--1096},
-    volume = {116},
-    note = {Ser. A}
+    volume = {116}
 }
 @article{jayag16,
     title = {Domination parameters in hypertrees},
@@ -2561,14 +2554,13 @@
     pages = {77--84},
     volume = {135}
 }
-@article{junn11a,
+@phdthesis{junn11a,
     title = {On identifying and locating-dominating codes},
     author = {V. Junnila},
-    journal = {Ph. D. Thesis},
     year = {2011},
     school = {University of Turku},
     pages = {125},
-    note = {Finland}
+    address = {Turku, Finland}
 }
 @article{junn12,
     title = {Adaptive identification of sets of vertices in graphs},
@@ -2844,13 +2836,12 @@
     pages = {620--627},
     volume = {259}
 }
-@article{laif07b,
+@phdthesis{laif07b,
     title = {Coding for network applications: robust identification and distributed resource allocation},
     author = {M. Laifenfeld},
-    journal = {Ph. D. Thesis},
     year = {2007},
     school = {University of Boston},
-    note = {USA}
+    address = {Massachusetts, USA}
 }
 @article{laif11,
     title = {Localization and identification in networks using robust identifying codes},
@@ -3016,13 +3007,13 @@
     pages = {269--288},
     volume = {243}
 }
-@article{lane06,
+@mastersthesis{lane06,
     title = {Trees with unique minimum locating-dominating sets},
     author = {S. M. Lane},
-    journal = {Master's Thesis, East Tennessee State University},
+    school = {East Tennessee State University},
     year = {2006},
     pages = {72},
-    note = {USA}
+    address = {Tennessee, USA}
 }
 @article{li08,
     title = {Bounds for fault-tolerant locating-dominating sets},
@@ -3122,7 +3113,10 @@
     title = {On connected 3-$\gamma_L$-dot-critical graphs},
     author = {M. Mimouni and N. Ikhlef-eschouf and M. Zamime},
     journal = {Bulletin of the Iranian Mathematical Society},
-    note = {to appear}
+    year = {2022},
+    pages = {979--991},
+    volume = {48},
+    doi = {10.1007/s41980-021-00558-y}
 }
 @article{mojd22,
     title = {On the conjectures of neighbor locating coloring of graphs},
@@ -3358,11 +3352,10 @@
 @article{payn80,
     title = {Identification keys and diagnostic tables: a review},
     author = {R. W. Payne and D. A. Preece},
-    journal = {Journal of the Royal Statistical Society},
+    journal = {Journal of the Royal Statistical Society, Series A},
     year = {1980},
     pages = {253--292},
-    volume = {143},
-    note = {Ser. A}
+    volume = {143}
 }
 @article{pela10,
     title = {Locating domination in graphs},
@@ -3395,14 +3388,13 @@
     pages = {27--38},
     volume = {6}
 }
-@article{pelt12b,
+@phdthesis{pelt12b,
     title = {On identifying and locating-dominating codes in the infinite king grid},
     author = {M. Pelto},
-    journal = {Ph. D. Thesis},
     year = {2012},
     pages = {133},
     school = {University of Turku},
-    note = {Finland}
+    note = {Turku, Finland}
 }
 @article{pelt13d,
     title = {Optimal ($r, \leq 3$)-locating-dominating codes in the infinite king grid},
@@ -3555,13 +3547,13 @@
     pages = {1544--1547},
     volume = {IT-49}
 }
-@article{rant07,
+@phdthesis{rant07,
     title = {Identifying and locating-dominating codes in binary Hamming spaces},
     author = {S. Ranto},
-    journal = {Ph. D. Thesis},
     year = {2007},
-    school = {University of Turku, Finland},
-    pages = {95}
+    school = {University of Turku},
+    pages = {95},
+    address = {Turnku, Finland}
 }
 @article{rant11,
     title = {On binary linear $r$-identifying codes},
@@ -3862,14 +3854,13 @@
     pages = {367--377},
     volume = {13}
 }
-@article{skag07,
+@phdthesis{skag07,
     title = {Identifying vertices in graphs and digraphs},
     author = {R. D. Skaggs},
-    journal = {Ph. D. Thesis},
     year = {2007},
     pages = {88},
     school = {University of South Africa},
-    note = {South Africa}
+    address = {Pretoria, South Africa}
 }
 @article{slat75a,
     title = {Leaves of trees},
@@ -3957,7 +3948,8 @@
     journal = {Applied Mathematics and Computation},
     year = {2022},
     volume = {416},
-    note = {Paper No. 126752}
+    pages = {8},
+    doi = {10.1016/j.amc.2021.126752}
 }
 @article{song21,
     title = {Locating and identifying codes in circulant graphs},
@@ -3976,15 +3968,13 @@
     pages = {159--169},
     volume = {25}
 }
-@article{stan11,
+@phdthesis{stan11,
     title = {On vertex identifying codes for infinite lattices},
     author = {B. Stanton},
-    journal = {Ph. D. Thesis},
     year = {2011},
     pages = {94},
     school = {Iowa State University},
-    note = {USA},
-    howpublished = {\url{http://orion.math.iastate.edu/rymartin/students/StantonB$_{-}$ PhD$_{-}$S11.pdf}}
+    address = {Iowa, USA}
 }
 @article{stan12,
     title = {Vertex identifying codes for the $n$-dimensional lattice},
@@ -4010,14 +4000,13 @@
     pages = {28--33},
     volume = {103}
 }
-@article{swei19k,
+@phdthesis{swei19k,
     title = {Optimization approaches for open-locating dominating sets},
     author = {D. B. Sweigart},
-    journal = {Ph.D. Thesis},
     year = {2019},
     pages = {137},
     school = {The College of William and Mary},
-    note = {Virginia, USA}
+    address = {Virginia, USA}
 }
 @article{swei18,
     title = {Maximum covering formulation for open locating dominating sets},
@@ -4049,14 +4038,13 @@
     pages = {133--134},
     note = {Bordeaux, France}
 }
-@article{ungr03,
+@mastersthesis{ungr03,
     title = {Location detection in emergency sensor networks using robust identifying codes},
     author = {R. Ungrangsi},
-    journal = {M.S. thesis},
     year = {2003},
     pages = {116},
     school = {Boston University},
-    note = {Boston, USA}
+    address = {Massachusetts, USA}
 }
 @article{ungr04,
     title = {An implementation of indoor location detection systems based on identifying codes},
@@ -4085,14 +4073,13 @@
     school = {Universit\'e de Li\`ege (D\'epartement de Math\'e\-matiques)},
     note = {Belgique}
 }
-@article{wash14,
+@phdthesis{wash14,
     title = {Identifying codes and domination in the product of graphs},
     author = {K. Wash},
-    journal = {Ph. D. Thesis},
     year = {2014},
     pages = {63},
     school = {Clemson University},
-    note = {USA}
+    note = {South Carolina, USA}
 }
 @article{xiao06,
     title = {The $d$-identifying codes problem for vertex identification in graphs: probabilistic analysis and an approximation algorithm},
@@ -4188,7 +4175,7 @@
 @article{zhan05,
     title = {On adjacent-vertex-distinguishing total coloring of graphs},
     author = {Z. Zhang and X. Chen and J. Li and B. Yao and X. Lu and J. Wang},
-    journal = {Science in China, Ser. A: Mathematics},
+    journal = {Science in China, Series A: Mathematics},
     year = {2005},
     pages = {289--299},
     volume = {48}
