--- a/main.tex
+++ b/main.tex
@@ -23,6 +23,8 @@
 \noindent I am Devin Jean, and I will be continuing to maintain this bibliography for the foreseeable future.
 If you would like to recommend a new publication be added, feel free to contact me at \texttt{devin.c.jean@vanderbilt.edu}.
 I will try to stay up to date with new publications, but emails from authors would be greatly appreciated.
+\medskip \\
+All references are available as bibtex: \url{https://github.com/dragazo/bibdom/blob/master/refs.bib}.
 }}
 \bigskip
 
