--- a/refs.bib
+++ b/refs.bib
@@ -116,14 +116,6 @@
     publisher = {Springer-Verlag},
     doi = {10.1007/978-3-319-09174-7_2}
 }
-@inproceedings{argi14a,
-    title = {On identifying code polyhedra of families of suns},
-    author = {G. R. Argiroffo and S. M. Bianchi and A. K. Wagler},
-    booktitle = {VIII-th ALIO/EURO Workshop on Applied Combinatorial Optimization},
-    month = {December},
-    year = {2014},
-    address = {Montevideo, Uruguay}
-}
 @article{argi15,
     title = {A polyhedral approach to locating-dominating sets in graphs},
     author = {G. R. Argiroffo and S. M. Bianchi and A. K. Wagler},
@@ -150,14 +142,6 @@
     pages = {1--8},
     volume = {43A},
     doi = {10.5614/itbj.sci.2011.43.1.1}
-}
-@article{auge07,
-    title = {Probl\`emes d'identification m\'etrique dans les graphes},
-    author = {D. Auger},
-    journal = {Rapport interne T\'el\'ecom Paris-2007D013},
-    year = {2007},
-    pages = {44},
-    address = {Paris, France}
 }
 @article{auge09a,
     title = {Induced paths in twin-free graphs},
@@ -186,15 +170,6 @@
     volume = {31},
     doi = {10.1016/j.ejc.2009.11.012}
 }
-@phdthesis{auge10a,
-    title = {Probl\`emes d'identification combinatoire et puissances de graphes},
-    author = {D. Auger},
-    month = {June},
-    year = {2010},
-    pages = {243},
-    school = {Telecom ParisTech},
-    address = {France}
-}
 @article{auge11,
     title = {Combinatorial identification problems and graph powers},
     author = {D. Auger},
@@ -214,37 +189,14 @@
     number = {1},
     doi = {10.3934/amc.2009.3.97}
 }
-@article{auge09d,
-    title = {Existence d'un cycle de longueur au moins $7$ dans un graphe sans ($1,\leq 2$)-jumeaux},
-    author = {D. Auger and I. Charon and O. Hudry and A. Lobstein},
-    journal = {Rapport interne Telecom ParisTech-2009D015},
-    year = {2009},
-    pages = {18},
-    address = {Paris, France}
-}
-@article{auge10,
-    title = {Maximum size of a minimum watching system and the graphs achieving the bound},
-    author = {D. Auger and I. Charon and O. Hudry and A. Lobstein},
-    journal = {Rapport interne Telecom ParisTech-2010D011},
-    year = {2010},
-    pages = {40},
-    address = {Paris, France}
-}
-@article{auge09g,
-    title = {On the existence of a cycle of length at least 7 in a $(1,\leq 2)$-twin-free graph},
-    author = {D. Auger and I. Charon and O. Hudry and A. Lobstein},
-    journal = {Discussiones Mathematicae Graph Theory},
-    year = {2010},
-    pages = {591--609},
-    volume = {30}
-}
 @article{auge09c,
     title = {Complexity results for identifying codes in planar graphs},
     author = {D. Auger and I. Charon and O. Hudry and A. Lobstein},
     journal = {International Transactions in Operational Research},
     year = {2010},
     pages = {691--710},
-    volume = {17}
+    volume = {17},
+    doi = {10.1111/j.1475-3995.2009.00750.x}
 }
 @article{auge09h,
     title = {Watching systems in graphs: an extension of identifying codes},
@@ -252,7 +204,8 @@
     journal = {Discrete Applied Mathematics},
     year = {2013},
     pages = {1674--1685},
-    volume = {161}
+    volume = {161},
+    doi = {10.1016/j.dam.2011.04.025}
 }
 @article{auge12a,
     title = {Maximum size of a minimum watching system and the graphs achieving the bound},
@@ -260,7 +213,8 @@
     journal = {Discrete Applied Mathematics},
     year = {2014},
     pages = {20--33},
-    volume = {164}
+    volume = {164},
+    doi = {10.1016/j.dam.2012.08.028}
 }
 @article{auge11b,
     title = {Sphere coverings and identifying codes},
@@ -268,7 +222,8 @@
     journal = {Designs, Codes and Cryptography},
     year = {2014},
     pages = {3--7},
-    volume = {70}
+    volume = {70},
+    doi = {10.1007/s10623-012-9638-x}
 }
 @article{auge12,
     title = {Watching systems in the king grid},
@@ -276,7 +231,8 @@
     journal = {Graphs and Combinatorics},
     year = {2013},
     pages = {333--347},
-    volume = {29}
+    volume = {29},
+    doi = {10.1007/s00373-011-1124-0}
 }
 @article{baba80,
     title = {On the complexity of canonical labeling of strong regular graphs},
@@ -284,7 +240,8 @@
     journal = {SIAM Journal of Computing},
     year = {1980},
     pages = {212--216},
-    volume = {9}
+    volume = {9},
+    doi = {10.1137/0209018}
 }
 @article{balb19,
     title = {Characterizing identifying codes from the spectrum of a graph or digraph},
@@ -292,7 +249,8 @@
     journal = {Linear Algebra and its Applications},
     year = {2019},
     pages = {138--147},
-    volume = {570}
+    volume = {570},
+    doi = {10.1016/j.laa.2019.02.010}
 }
 @article{balb20k,
     title = {Identifying codes in line digraphs},
@@ -300,8 +258,254 @@
     journal = {Applied Mathematics and Computation},
     year = {2020},
     pages = {10},
-    volume = {383}
+    volume = {383},
+    doi = {10.1016/j.amc.2020.125357}
 }
+@inproceedings{swei18,
+    title = {Maximum covering formulation for open locating dominating sets},
+    author = {B. Sweigart and R. Kincaid},
+    booktitle = {Operations Research Proceedings 2016},
+    year = {2018},
+    pages = {259--264},
+    address = {Cham, Switzerland},
+    publisher = {Springer},
+    doi = {10.1007/978-3-319-55702-1_35}
+}
+@inproceedings{swei14,
+    title = {An integer program for open locating dominating sets and its results on the hexagon-triangle infinite grid and other graphs},
+    author = {B. Sweigart and J. Presnell and R. Kincaid},
+    booktitle = {2014 Systems and Information Engineering Design Symposium (SIEDS)},
+    year = {2014},
+    pages = {29--32},
+    address = {Charlottesville, USA},
+    publisher = {IEEE},
+    doi = {10.1109/SIEDS.2014.6829887}
+}
+@article{honk06a,
+    title = {A family of optimal identifying codes in $Z^2$},
+    author = {I. Honkala},
+    journal = {Journal of Combinatorial Theory, Series A},
+    year = {2006},
+    pages = {1760--1763},
+    volume = {113},
+    doi = {10.1016/j.jcta.2006.03.011}
+}
+@article{honk05a,
+    title = {An optimal locating-dominating set in the infinite triangular grid},
+    author = {I. Honkala},
+    journal = {Discrete Mathematics},
+    year = {2006},
+    pages = {2670--2681},
+    volume = {306},
+    doi = {10.1016/j.disc.2006.04.028}
+}
+@article{honk08,
+    title = {On $r$-locating-dominating sets in paths},
+    author = {I. Honkala},
+    journal = {European Journal of Combinatorics},
+    year = {2009},
+    pages = {1022--1025},
+    volume = {30},
+    doi = {10.1016/j.ejc.2008.04.011}
+}
+@article{honk10,
+    title = {An optimal strongly identifying code in the infinite triangular grid},
+    author = {I. Honkala},
+    journal = {Electronic Journal of Combinatorics},
+    year = {2010},
+    volume = {17},
+    number = {1},
+    pages = {10},
+    doi = {10.37236/363}
+}
+@article{hudr18z,
+    title = {The compared costs of domination, location-domination and identification},
+    author = {O. Hudry and A. Lobstein},
+    journal = {Discussiones Mathematicae Graph Theory},
+    year = {2020},
+    pages = {127--147},
+    volume = {40},
+    number = {1},
+    doi = {10.7151/dmgt.2129}
+}
+@article{jeanAP1,
+    title = {Fault-tolerant identifying codes in special classes of graphs},
+    author = {D. C. Jean and S. J. Seo},
+    journal = {Discussiones Mathematicae Graph Theory},
+    year = {2022},
+    pages = {21},
+    doi = {10.7151/dmgt.2465},
+    note = {to appear}
+}
+@article{song22,
+    title = {Locating and identifying codes in dihedral graphs},
+    author = {S. J. Song and X. Ning and P. Cheng},
+    journal = {Applied Mathematics and Computation},
+    year = {2022},
+    volume = {416},
+    pages = {8},
+    doi = {10.1016/j.amc.2021.126752}
+}
+@article{mimoC22,
+    title = {On connected 3-$\gamma_L$-dot-critical graphs},
+    author = {M. Mimouni and N. Ikhlef-eschouf and M. Zamime},
+    journal = {Bulletin of the Iranian Mathematical Society},
+    year = {2022},
+    pages = {979--991},
+    volume = {48},
+    doi = {10.1007/s41980-021-00558-y}
+}
+@article{raza18e,
+    title = {Binary locating-dominating sets in rotationally-symmetric convex polytopes},
+    author = {H. Raza and S. Hayat and X. F. Pan},
+    journal = {Symmetry},
+    year = {2018},
+    volume = {10},
+    number = {12},
+    pages = {18},
+    doi = {10.3390/sym10120727}
+}
+@inproceedings{seo11b,
+    title = {Open neighborhood locating-domination for infinite cylinders},
+    author = {S. J. Seo and P. J. Slater},
+    booktitle = {Proceedings of the 49th Annual Southeast Regional Conference},
+    year = {2011},
+    pages = {334-335},
+    address = {Atlanta, Georgia, USA},
+    publisher = {ACM},
+    doi = {10.1145/2016039.2016134}
+}
+@article{delm11,
+    title = {On two variations of identifying codes},
+    author = {O. Delmas and S. Gravier and M. Montassier and A. Parreau},
+    journal = {Discrete Mathematics},
+    year = {2011},
+    pages = {1948--1956},
+    volume = {311},
+    doi = {10.1016/j.disc.2011.05.018}
+}
+@article{chen11b,
+    title = {Bounds on the locating-total domination number of a tree},
+    author = {X. Chen and M. Y. Sohn},
+    journal = {Discrete Applied Mathematics},
+    year = {2011},
+    pages = {769--773},
+    volume = {159},
+    doi = {10.1016/j.dam.2010.12.025}
+}
+@article{junn19e,
+    title = {On stronger types of locating-dominating codes},
+    author = {V. Junnila and T. Laihonen and T. Lehtil\"a and M. L. Puertas},
+    journal = {Discrete Mathematics and Theoretical Computer Science},
+    year = {2019},
+    pages = {21},
+    volume = {21},
+    number = {1},
+    doi = {10.23638/DMTCS-21-1-1}
+}
+@article{honk01b,
+    title = {Codes for strong identification},
+    author = {I. Honkala and T. Laihonen and S. Ranto},
+    journal = {Electronic Notes in Discrete Mathematics},
+    year = {2001},
+    pages = {262--270},
+    volume = {5},
+    doi = {10.1016/S1571-0653(04)00177-5}
+}
+@article{hern10,
+    title = {Extremal graph theory for metric dimension and diameter},
+    author = {C. Hernando and M. Mora and I. M. Pelayo and C. Seara and D. R. Wood},
+    journal = {Electronic Notes in Discrete Mathematics},
+    year = {2007},
+    volume = {29},
+    number = {1},
+    pages = {339--343},
+    doi = {10.1016/j.endm.2007.07.058}
+}
+@article{dema22,
+    title = {A graph theoretical approach to the firebreak locating problem},
+    author = {M. Demange and A. Di fonso and G. Di stefano and P. Vittorini},
+    journal = {Theoretical Computer Science},
+    year = {2022},
+    pages = {47--72},
+    volume = {914},
+    doi = {10.1016/j.tcs.2022.02.012}
+}
+@inproceedings{dey20,
+    title = {Discriminating codes in geometric setups},
+    author = {S. Dey and F. Foucaud and S. C. Nandy and A. Sen},
+    booktitle = {Proceedings of 31st International Symposium on Algorithms and Computation (ISAAC 2020)},
+    year = {2020},
+    volume = {181},
+    pages = {1--16},
+    doi = {10.4230/LIPIcs.ISAAC.2020.24}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @article{balb20q,
     title = {Sufficient conditions for a digraph to admit a (1,$\leq \ell$)-identifying code},
     author = {C. Balbuena and C. Dalf\'o and B. Mart\'inez-barona},
@@ -1035,14 +1239,6 @@
     pages = {1540--1547},
     volume = {159}
 }
-@article{chen11b,
-    title = {Bounds on the locating-total domination number of a tree},
-    author = {X. Chen and M. Y. Sohn},
-    journal = {Discrete Applied Mathematics},
-    year = {2011},
-    pages = {769--773},
-    volume = {159}
-}
 @article{cohe99a,
     title = {Improved identifying codes for the grid},
     author = {G. Cohen and S. Gravier and I. Honkala and A. Lobstein and M. Mollard and Ch. Payan and G. Z\'emor},
@@ -1204,30 +1400,6 @@
     year = {2003},
     pages = {477--491},
     volume = {98}
-}
-@article{delm11,
-    title = {On two variations of identifying codes},
-    author = {O. Delmas and S. Gravier and M. Montassier and A. Parreau},
-    journal = {Discrete Mathematics},
-    year = {2011},
-    pages = {1948--1956},
-    volume = {311}
-}
-@article{dema22,
-    title = {A graph theoretical approach to the firebreak locating problem},
-    author = {M. Demange and A. Di fonso and G. Di stefano and P. Vittorini},
-    journal = {Theoretical Computer Science},
-    year = {2022},
-    pages = {47--72},
-    volume = {914}
-}
-@inproceedings{dey20,
-    title = {Discriminating codes in geometric setups},
-    author = {S. Dey and F. Foucaud and S. C. Nandy and A. Sen},
-    booktitle = {Proceedings of 31st International Symposium on Algorithms and Computation (ISAAC 2020)},
-    year = {2020},
-    volume = {181},
-    pages = {24:1--24:16}
 }
 @article{dhal19a,
     title = {Constructions of $r$-identifying codes and ($r,\leq \ell$)-identifying codes},
@@ -1580,13 +1752,6 @@
     pages = {1532--1546},
     volume = {160}
 }
-@article{fouc10c,
-    title = {On the identification of vertices in graphs using paths},
-    author = {F. Foucaud and M. Kov$\check{\textrm{s}}$e},
-    journal = {Abstracts of the 8th French Combinatorial Conference},
-    year = {2010},
-    address = {Orsay, France}
-}
 @article{fouc14,
     title = {On graph identification problems and the special case of identifying vertices using paths},
     author = {F. Foucaud and M. Kov$\check{\textrm{s}}$e},
@@ -1912,7 +2077,8 @@
     journal = {Lecture Notes in Computer Science},
     year = {2001},
     pages = {158--169},
-    publisher = {Springer-Verlag}
+    publisher = {Springer-Verlag},
+    volume = {2161}
 }
 @article{hara76,
     title = {On the metric dimension of a graph},
@@ -2041,14 +2207,6 @@
     pages = {195--203},
     volume = {263}
 }
-@article{hern10,
-    title = {Extremal graph theory for metric dimension and diameter},
-    author = {C. Hernando and M. Mora and I. M. Pelayo and C. Seara and D. R. Wood},
-    journal = {Electronic Journal of Combinatorics},
-    year = {2010},
-    volume = {17},
-    number = {1}
-}
 @mastersthesis{heyd18,
     title = {Location-domination in twin-free graphs and digraphs},
     author = {S. Heydarshahi},
@@ -2110,24 +2268,6 @@
     pages = {303--323},
     volume = {8}
 }
-@article{honk06a,
-    title = {A family of optimal identifying codes in $Z^2$},
-    author = {I. Honkala},
-    journal = {Journal of Combinatorial Theory, Series A},
-    year = {2006},
-    pages = {1760--1763},
-    volume = {113},
-    doi = {10.1016/j.jcta.2006.03.011}
-}
-@article{honk05a,
-    title = {An optimal locating-dominating set in the infinite triangular grid},
-    author = {I. Honkala},
-    journal = {Discrete Mathematics},
-    year = {2006},
-    pages = {2670--2681},
-    volume = {306},
-    doi = {10.1016/j.disc.2006.04.028}
-}
 @article{honk06b,
     title = {On 2-edge-robust $r$-identifying codes in the king grid},
     author = {I. Honkala},
@@ -2136,25 +2276,6 @@
     pages = {151--165},
     volume = {36},
     howpublished = {\url{https://ajc.maths.uq.edu.au/pdf/36/ajc_v36_p151.pdf}}
-}
-@article{honk08,
-    title = {On $r$-locating-dominating sets in paths},
-    author = {I. Honkala},
-    journal = {European Journal of Combinatorics},
-    year = {2009},
-    pages = {1022--1025},
-    volume = {30},
-    doi = {10.1016/j.ejc.2008.04.011}
-}
-@article{honk10,
-    title = {An optimal strongly identifying code in the infinite triangular grid},
-    author = {I. Honkala},
-    journal = {Electronic Journal of Combinatorics},
-    year = {2010},
-    volume = {17},
-    number = {1},
-    pages = {10},
-    doi = {10.37236/363}
 }
 @article{honk14c,
     title = {On the number of optimal identifying codes in a twin-free graph},
@@ -2300,14 +2421,6 @@
     pages = {193--204},
     volume = {24}
 }
-@article{honk01b,
-    title = {Codes for strong identification},
-    author = {I. Honkala and T. Laihonen and S. Ranto},
-    journal = {Proceedings of Workshop on Coding and Cryptography 2001},
-    year = {2001},
-    pages = {279--287},
-    address = {Paris, France}
-}
 @article{honk02d,
     title = {On strongly identifying codes},
     author = {I. Honkala and T. Laihonen and S. Ranto},
@@ -2406,16 +2519,6 @@
     pages = {83--102},
     volume = {767}
 }
-@article{hudr18z,
-    title = {The compared costs of domination, location-domination and identification},
-    author = {O. Hudry and A. Lobstein},
-    journal = {Discussiones Mathematicae Graph Theory},
-    year = {2020},
-    pages = {127--147},
-    volume = {40},
-    number = {1},
-    doi = {10.7151/dmgt.2129}
-}
 @article{hudr20z,
     title = {Some rainbow problems in graphs have complexity equivalent to satisfiability problems},
     author = {O. Hudry and A. Lobstein},
@@ -2480,26 +2583,6 @@
     pages = {445--455},
     volume = {43},
     number = {2}
-}
-@article{jeanAP1,
-    title = {Fault-tolerant identifying codes in special classes of graphs},
-    author = {D. C. Jean and S. J. Seo},
-    journal = {Discussiones Mathematicae Graph Theory},
-    year = {2022},
-    pages = {21},
-    doi = {10.7151/dmgt.2465},
-    note = {to appear}
-}
-@article{jeanAP2,
-    title = {Progress on fault-tolerant locating-dominating sets},
-    author = {D. C. Jean and S. J. Seo},
-    journal = {Discrete Mathematics, Algorithms and Applications},
-    doi = {10.1142/S179383092250080X},
-    volume = {15},
-    number = {2},
-    pages = {14},
-    year = {2022},
-    note = {to appear}
 }
 @article{jian18,
     title = {Periodicity of identifying codes in strips},
@@ -2660,15 +2743,6 @@
     year = {2022},
     pages = {67--85},
     volume = {90}
-}
-@article{junn19e,
-    title = {On stronger types of locating-dominating codes},
-    author = {V. Junnila and T. Laihonen and T. Lehtil\"a and M. L. Puertas},
-    journal = {Discrete Mathematics and Theoretical Computer Science},
-    year = {2019},
-    pages = {21},
-    volume = {21},
-    number = {1}
 }
 @article{junn19c,
     title = {Location in circulant graphs},
@@ -3051,15 +3125,6 @@
     year = {2017},
     pages = {745--754},
     volume = {37}
-}
-@article{mimoC22,
-    title = {On connected 3-$\gamma_L$-dot-critical graphs},
-    author = {M. Mimouni and N. Ikhlef-eschouf and M. Zamime},
-    journal = {Bulletin of the Iranian Mathematical Society},
-    year = {2022},
-    pages = {979--991},
-    volume = {48},
-    doi = {10.1007/s41980-021-00558-y}
 }
 @article{mojd22,
     title = {On the conjectures of neighbor locating coloring of graphs},
@@ -3550,16 +3615,6 @@
     number = {12},
     pages = {12}
 }
-@article{raza18e,
-    title = {Binary locating-dominating sets in rotationally-symmetric convex polytopes},
-    author = {H. Raza and S. Hayat and X. F. Pan},
-    journal = {Symmetry},
-    year = {2018},
-    volume = {10},
-    number = {12},
-    pages = {18},
-    doi = {10.3390/sym10120727}
-}
 @article{robe07,
     title = {Locating sensors in paths and cycles: the case of $2$-identifying codes},
     author = {D. L. Roberts and F. S. Roberts},
@@ -3671,14 +3726,6 @@
     year = {2011},
     pages = {484--489},
     volume = {159}
-}
-@article{seo11b,
-    title = {Open neighborhood locating-domination for infinite cylinders},
-    author = {S. J. Seo and P. J. Slater},
-    journal = {Proceedings of ACM SE 11},
-    year = {2011},
-    pages = {334-335},
-    address = {Atlanta, Georgia, USA}
 }
 @article{seo12a,
     title = {Graphical parameters for classes of tumbling block graphs},
@@ -3873,15 +3920,6 @@
     pages = {261--272},
     volume = {104}
 }
-@article{song22,
-    title = {Locating and identifying codes in dihedral graphs},
-    author = {S. J. Song and X. Ning and P. Cheng},
-    journal = {Applied Mathematics and Computation},
-    year = {2022},
-    volume = {416},
-    pages = {8},
-    doi = {10.1016/j.amc.2021.126752}
-}
 @article{song21,
     title = {Locating and identifying codes in circulant graphs},
     author = {S. J. Song and W. Zhang and C. Xu},
@@ -3937,20 +3975,6 @@
     pages = {137},
     school = {The College of William and Mary},
     address = {Virginia, USA}
-}
-@article{swei18,
-    title = {Maximum covering formulation for open locating dominating sets},
-    author = {B. Sweigart and R. Kincaid},
-    journal = {Operations Research Proceedings 2016},
-    year = {2018},
-    pages = {259--264}
-}
-@article{swei14,
-    title = {An integer program for open locating dominating sets and its results on the hexagon-triangle infinite grid and other graphs},
-    author = {B. Sweigart and J. Presnell and R. Kincaid},
-    journal = {2014 Systems and Information Engineering Design Symposium (SIEDS), Charlottesville, USA},
-    year = {2014},
-    pages = {29--32}
 }
 @article{thul07,
     title = {Vertex identifying codes for fault isolation in communication networks},
@@ -4105,4 +4129,127 @@
     year = {2005},
     pages = {289--299},
     volume = {48}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@inproceedings{argi14a,
+    title = {On identifying code polyhedra of families of suns},
+    author = {G. R. Argiroffo and S. M. Bianchi and A. K. Wagler},
+    booktitle = {VIII-th ALIO/EURO Workshop on Applied Combinatorial Optimization},
+    month = {December},
+    year = {2014},
+    address = {Montevideo, Uruguay}
+}
+@article{jeanAP2,
+    title = {Progress on fault-tolerant locating-dominating sets},
+    author = {D. C. Jean and S. J. Seo},
+    journal = {Discrete Mathematics, Algorithms and Applications},
+    doi = {10.1142/S179383092250080X},
+    volume = {15},
+    number = {2},
+    pages = {14},
+    year = {2022},
+    note = {to appear}
+}
+@article{auge09d,
+    title = {Existence d'un cycle de longueur au moins $7$ dans un graphe sans ($1,\leq 2$)-jumeaux},
+    author = {D. Auger and I. Charon and O. Hudry and A. Lobstein},
+    journal = {Rapport interne Telecom ParisTech-2009D015},
+    year = {2009},
+    pages = {18},
+    address = {Paris, France}
+}
+@article{auge10,
+    title = {Maximum size of a minimum watching system and the graphs achieving the bound},
+    author = {D. Auger and I. Charon and O. Hudry and A. Lobstein},
+    journal = {Rapport interne Telecom ParisTech-2010D011},
+    year = {2010},
+    pages = {40},
+    address = {Paris, France}
+}
+@article{auge09g,
+    title = {On the existence of a cycle of length at least 7 in a $(1,\leq 2)$-twin-free graph},
+    author = {D. Auger and I. Charon and O. Hudry and A. Lobstein},
+    journal = {Discussiones Mathematicae Graph Theory},
+    year = {2010},
+    pages = {591--609},
+    volume = {30}
+}
+@phdthesis{auge10a,
+    title = {Probl\`emes d'identification combinatoire et puissances de graphes},
+    author = {D. Auger},
+    month = {June},
+    year = {2010},
+    pages = {243},
+    school = {Telecom ParisTech},
+    address = {France}
+}
+@article{auge07,
+    title = {Probl\`emes d'identification m\'etrique dans les graphes},
+    author = {D. Auger},
+    journal = {Rapport interne T\'el\'ecom Paris-2007D013},
+    year = {2007},
+    pages = {44},
+    address = {Paris, France}
+}
+@article{fouc10c,
+    title = {On the identification of vertices in graphs using paths},
+    author = {F. Foucaud and M. Kov$\check{\textrm{s}}$e},
+    journal = {Abstracts of the 8th French Combinatorial Conference},
+    year = {2010},
+    address = {Orsay, France}
 }
